# NoPoDoFo

./: .bookignore  .clang-format  .directory  .gitignore  .gitmodules  .node-version  .npmignore  CLion.codestyle.json  CMakeLists.txt  CMakeSettings.json  DbgLog.txt  Default.codestyle.json  Dockerfile  GLOSSARY.md  README.md  SUMMARY.md  alpine-install-deps.sh  binding.gyp  certificate.pem  checkDeps.js  debug.js  debug.txt  index.d.ts  index.js  index.ts  install.js  key.pem  main.cpp  package-lock.json  package.json  tsconfig.docs.json  tsconfig.json  typings.json
.circleci/: config.yml
_book/: search_index.json
_book/docs/: action.html  annotations.html  array.html  checkbox.html  destination.html  document.html  encoding.html  form.html  image.html  installation.html  listbox.html  listfield.html  page.html  pushbutton.html  rect.html  signaturefield.html  signer.html  xobject.html
cmake-modules/: FindPoDoFo.cmake
coverage/: _all.spec.ts.html  annotation.ts.html  document.spec.ts.html  document.ts.html  encrypt.ts.html  field.spec.ts.html  field.ts.html  form.ts.html  image.ts.html  index.html  index.ts.html  object.spec.ts.html  object.ts.html  page.spec.ts.html  page.ts.html  painter.spec.ts.html  painter.ts.html  parser.spec.ts.html  parser.ts.html  rect.ts.html  reference.ts.html  signer.spec.ts.html  signer.ts.html  stream.ts.html  table.ts.html
docs/: .directory  GLOSSARY.html  README.md  action.md  annotations.md  array.md  bestpractices.md  checkbox.md  color.md  combobox.md  contentstokenizer.md  data.md  date.md  destination.md  dictionary.md  document.md  encoding.md  encrypt.md  extgstate.md  field.md  filespec.md  font.md  form.md  globals.html  image.md  index.html  installation.md  listbox.md  listfield.md  object.md  outline.md  page.md  painter.md  pushbutton.md  rect.md  search_index.json  signaturefield.md  signer.md  simpletable.md  textfield.md  (+1 more)
docs/classes/: _annotation_.annotation.html  _arr_.arr.html  _data_.data.html  _dictionary_.dictionary.html  _document_.document.html  _encrypt_.encrypt.html  _field_.checkbox.html  _field_.combobox.html  _field_.enumerablefield.html  _field_.field.html  _field_.listbox.html  _field_.listfield.html  _field_.signaturefield.html  _field_.textfield.html  _form_.form.html  _image_.image.html  _index_.document.html  _index_.page.html  _object_.obj.html  _page_.page.html  _painter_.encoding.html  _painter_.extgstate.html  _painter_.font.html  _painter_.painter.html  _parser_.contentstokenizer.html  _rect_.rect.html  _reference_.ref.html  _signature_.signature.html  _signer_.signer.html  _stream_.stream.html  _table_.cell.html  _table_.table.html  annotation.annotation.html  document.document.html  field.field.html  field.textfield.html  form.form.html  image.image.html  painter.painter.html  rect.rect.html  (+1 more)
docs/cookbook/: bookmark.md  datatypes.md  images.md  index.md  signer.md  table.md
docs/docs/: GLOSSARY.html  date.html  filespec.html  index.html
docs/documentation/: action.html  annotations.html  array.html  bestpractices.html  checkbox.html  color.html  data.html  (+30 more)
documentation/: action.md  annotations.md  array.md  bestpractices.md  color.md  configure.md  contentstokenizer.md  data.md  dictionary.md  document.md  encoding.md  encrypt.md  extgstate.md  font.md  image.md  installation.md  listbox.md  listfield.md  object.md  page.md  painter.md  ref.md  signaturefield.md  signer.md  simpletable.md  textfield.md  xobject.md
guides/: acroform.md  aws_lambda.md  document.md  encrypt.md  font.md  getting_started.md  native_addon_dev_env.md  page.md  painter.md  parsers.md  primitives.md  proxies.md  signer.md
lib/: NAction.ts  NAnnotation.ts  NArray.ts  NBookmark.ts  NData.ts  NDate.ts  NDestination.ts  NDocument.ts  NEncoding.ts  NEncrypt.ts  NExtGState.ts  NField.ts  NFileSpec.ts  NFont.ts  NForm.ts  NImage.ts  NObject.ts  NOutlines.ts  NPage.ts  NPainter.ts  NParser.ts  NRect.ts  NRef.ts  NSignatureField.ts  NSigner.ts  NStream.ts  NTable.ts  NXObject.ts  Utilities.ts  _all.spec.ts  action.ts  annotation.js  annotation.ts  arr.js  arr.spec.ts  arr.ts  base-document.ts  data.ts  date.ts  destination.ts  (+48 more)
scripts/: install.js  publish.js  test-setup.js
sdk/: CMakeLists.txt  Concat.h  FlattenFields.cc  FlattenFields.h
spec/: Dockerfile  alpine-install-deps.sh
spec/unit/: Annotations.ts  Base.ts  Binding.cc  Bookmark.ts  Bug89.ts  CMakeLists.txt  Document.ts  Encryption.ts  Field.ts  FileAttachment.ts  Font.ts  Form.ts  Image.ts  Page.ts  Painter.ts  Parser.ts  Primitives.ts  Signer.ts  document.ts  encrypt.ts  field.ts  form.ts  object.ts  page.ts  painter.ts  parser.ts  signer.ts
src/: Annotation.cc  Annotation.h  CMakeLists.txt  CheckBox.cc  CheckBox.h  Configure.cc  Configure.h  Defines.cc  Defines.h  Dictionary.cc  Dictionary.h  Document.cc  Document.cc.autosave  Document.h  ErrorHandler.cc  ErrorHandler.h  Field.cc  Field.h  FileSpec.cc  FileSpec.h  Form.cc  Form.h  Image.cc  Image.h  Log.cc  Log.h  NObject.cc  NObject.h  Obj.cc  Obj.h  Page.cc  Page.h  Painter.cc  Painter.h  Rect.cc  Rect.h  Ref.cc  Ref.h  Signature.cc  Signature.h  (+22 more)
src/base/: Arr.cc  Arr.h  Array.cc  Array.h  Color.cc  Color.h  ContentsTokenizer.cc  ContentsTokenizer.h  Data.cc  Data.h  Date.cc  Date.h  Dictionary.cc  Dictionary.h  Names.h  Obj.cc  Obj.h  Ref.cc  Ref.h  Stream.cc  Stream.h  Vector.cc  Vector.h  XObject.cc  XObject.h
src/crypt/: signature.cc  signature.h
src/crypto/: Signature.cc  Signature.h
src/doc/: Action.cc  Action.h  Annotation.cc  Annotation.h  BaseDocument.cc  BaseDocument.h  Button.cc  Button.h  CheckBox.cc  CheckBox.h  ComboBox.cc  ComboBox.h  Coordinates.cc  Coordinates.h  Destination.cc  Destination.h  Document.cc  Document.h  Encoding.cc  Encoding.h  Encrypt.cc  Encrypt.h  ExtGState.cc  ExtGState.h  Field.cc  Field.h  FileSpec.cc  FileSpec.h  Font.cc  Font.h  Form.cc  Form.h  Image.cc  Image.h  ListBox.cc  ListBox.h  ListField.cc  ListField.h  Outline.cc  Outline.h  (+19 more)
src/nlib/: FlattenFields.cc
test/: catch.hpp  document.cc
test-documents/: certificate.pem
typings/: index.d.ts
(+221 files in other folders)
